[package]
name = "sentinel-agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Sentinels-Today/sentinel-agent"
homepage = "https://sentinels.today"
authors = ["Sentinels <admin@sentinels.today>"]
description = "On-device daemon for Sentinels: device identity, signed telemetry, attestation."
rust-version = "1.75"
readme = "README.md"

[[bin]]
name = "sentinel-agent"
path = "src/main.rs"

[lib]
name = "sentinel_agent"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
